Fixed footer paddig on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,8 @@ body {
   .footer {
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 
   .share-button.big-screen {
